crates/fe/tests/fixtures/cli_output/single_files/type_error.snap
---
source: crates/fe/tests/cli_output.rs
assertion_line: 77
expression: output
input_file: tests/fixtures/cli_output/single_files/type_error.fe
---
=== STDERR ===
errors in file://<project>/crates/fe/tests/fixtures/cli_output/single_files/type_error.fe

error[8-0000]: type mismatch
  ┌─ type_error.fe:4:16
  │
4 │     return x + y  // Type error: can't add i32 and bool
  │                ^ expected `i32`, but `bool` is given


=== EXIT CODE: 1 ===
